--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "eko/feedbundle",
+    "name": "hypebeast/feedbundle",
     "type": "library",
     "description": "A Symfony bundle to build RSS feeds from entities",
     "keywords": ["feed", "bundle", "rss", "atom"],
@@ -13,10 +13,13 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.0,<2.2-dev"
+        "symfony/framework-bundle": ">=2.0"
     },
     "autoload": {
         "psr-0": { "Eko\\FeedBundle": "" }
+    },
+    "replace": {
+        "eko/feedbundle": "dev-master"  
     },
     "target-dir": "Eko/FeedBundle"
 }
